test/conformance/chainsaw/mutating-policies/existing/background-disabled/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-mpol-background-disabled-ns
