test/conformance/chainsaw/mutating-policies/existing/background-disabled/policy.yaml
apiVersion: policies.kyverno.io/v1beta1
kind: MutatingPolicy
metadata:
  name: test-mpol-background-disabled
spec:
  failurePolicy: Fail
  evaluation:
    admission:
      enabled: false
    background:
      enabled: false
    mutateExisting:
      enabled: true
  matchConstraints:
    resourceRules:
    - apiGroups: [ "" ]
      apiVersions: [ "v1" ]
      operations: [ "CREATE", "UPDATE" ]
      resources: [ "configmaps" ]
      resourceNames: [ "test-mpol-background-disabled-cm" ]
  matchConditions:
  - name: target-namespace
    expression: object.metadata.namespace == 'test-mpol-background-disabled-ns'
  mutations:
  - patchType: ApplyConfiguration
    applyConfiguration:
      expression: >
        Object{
          metadata: Object.metadata{
            labels: Object.metadata.labels{
              mutated: "existing"
            }
          }
        }
