test/conformance/chainsaw/mutating-policies/existing/background-disabled/configmap-assert.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: test-mpol-background-disabled-cm
  namespace: test-mpol-background-disabled-ns
  labels:
    mutated: existing
